--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,7 @@ body {
 
 body.lock {
   overflow: hidden;
+  padding: 0px 17px 0px 0px;
 }
 
 .wrapper {
@@ -1073,6 +1074,10 @@ body.lock {
 
 .first__item-left {
   padding: 0px 159px 0px 0px;
+}
+
+.first__tt h2 {
+  margin: 96px 0px 0px 0px;
 }
 
 .first__title {
@@ -2060,6 +2065,261 @@ button.slick-prev.slick-arrow:after {
   color: rgba(37, 37, 37, 0.3);
 }
 
+.modal {
+  display: none;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #00000070;
+  z-index: 999999;
+}
+
+.modal__container {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  max-width: 600px;
+  background: #FBFBFB;
+  -webkit-box-shadow: 0px 16px 24px rgba(175, 181, 188, 0.5);
+          box-shadow: 0px 16px 24px rgba(175, 181, 188, 0.5);
+  border-radius: 12px 0px 12px 12px;
+  padding: 48px 100px;
+}
+
+.modal__close {
+  position: absolute;
+  font-family: Roboto-Thin;
+  right: -38px;
+  top: -38px;
+  width: 70px;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 50px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 70px;
+  border-radius: 50%;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  background: #f5f5f5;
+  width: 92px;
+  height: 92px;
+}
+
+.modal__close:before {
+  content: '';
+  border: 4px solid #3067D1;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 70px;
+  height: 70px;
+  display: block;
+  position: absolute;
+  left: 11px;
+  border-radius: 50%;
+  top: 11px;
+}
+
+.modal__title {
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0em;
+  text-align: center;
+  padding: 0px 0px 48px 0px;
+}
+
+.modal__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 24px;
+  color: #BBBBBB;
+}
+
+.modal__text input {
+  padding: 17px 24px;
+  margin: 12px 0;
+  width: 100%;
+  border: 1px solid rgba(37, 37, 37, 0.3);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.modal__text input::-webkit-input-placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #BBBBBB;
+  opacity: 1;
+  /* Firefox */
+}
+
+.modal__text input::-moz-placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #BBBBBB;
+  opacity: 1;
+  /* Firefox */
+}
+
+.modal__text input:-ms-input-placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #BBBBBB;
+  opacity: 1;
+  /* Firefox */
+}
+
+.modal__text input::-ms-input-placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #BBBBBB;
+  opacity: 1;
+  /* Firefox */
+}
+
+.modal__text input::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #BBBBBB;
+  opacity: 1;
+  /* Firefox */
+}
+
+.modal__text input:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #BBBBBB;
+}
+
+.modal__text input:-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #BBBBBB;
+}
+
+.modal__text textarea {
+  padding: 17px 24px;
+  margin: 12px 0;
+  width: 100%;
+  border: 1px solid rgba(37, 37, 37, 0.3);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+  color: #BBBBBB;
+  min-height: 120px;
+}
+
+.modal__politiks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal__politiks input {
+  width: 30px;
+  margin: 0px 15px 0px 0px;
+}
+
+.modal__submit {
+  height: 52px;
+  width: 293px;
+  background: #3067D1;
+  border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 28px auto 0 auto;
+}
+
+.modal__submit a {
+  font-size: 13px;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 1px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.modal.active {
+  display: block;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.cu-checkbox {
+  position: absolute;
+  opacity: 0;
+}
+
+.cu-checkbox + label {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.cu-checkbox + label::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  background: rgba(144, 181, 145, 0.3);
+  border: 1px solid #93AE93;
+  border-radius: 50%;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.cu-checkbox:checked + label::before {
+  border-color: #93AE93;
+  background: rgba(144, 181, 145, 0.3);
+  background-image: url(../img/check.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 @media (max-width: 1896px) {
   .about__items {
     -webkit-box-pack: center;
@@ -2409,6 +2669,14 @@ button.slick-prev.slick-arrow:after {
         flex-wrap: wrap;
     text-align: center;
   }
+
+  .modal__text input {
+    width: 283px;
+  }
+
+  .modal__politiks input {
+    width: 30px;
+  }
 }
 
 @media (max-width: 872px) {
@@ -2578,6 +2846,13 @@ button.slick-prev.slick-arrow:after {
         flex-wrap: wrap;
     display: block;
   }
+
+  .modal__container {
+    padding: 15px;
+    margin: 0 10px;
+    left: 48%;
+    width: 271px;
+  }
 }
 
 @media (max-width: 479.98px) {
@@ -2635,6 +2910,18 @@ button.slick-prev.slick-arrow:after {
 
   .about__slider-for img {
     max-width: 300px;
+  }
+
+  .modal__text input {
+    width: 267px;
+  }
+
+  .modal__text textarea {
+    width: 267px;
+  }
+
+  .modal__submit {
+    width: 100%;
   }
 }
 
